--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <!-- Import materialize.css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="grey lighten-3">
     <!-- Import jQuery before materialize.js -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
